+gitignore convpwd.js+ index.html+

--- a/index.html
+++ b/index.html
@@ -280,7 +280,8 @@
 		</div>
 
 		<div class="footer">
-			<a href="http://EugeneGantz.ru" target="_blank">EugeneGantz.ru</a>
+			<a href="http://EugeneGantz.ru" target="_blank">EugeneGantz.ru</a><br />
+			<a href="https://github.com/eugenegantz/Convenient-password-generator" target="_blank">GitHub</a><br />
 		</div>
 	</body>
 </html>
